plugins {
    id 'org.springframework.boot' version '3.3.2' apply false
    id 'io.spring.dependency-management' version '1.1.6' apply false
    id 'java'
}

allprojects {
    group = 'com.mawus'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    task bootRunAll {
        dependsOn ':modules:core:bootRun', ':modules:api:bootRun', ':modules:bot:bootRun', ':modules:rasp-api:bootRun'
    }

    task buildAll(type: GradleBuild) {
        description = 'Assemble all modules'
        group = 'build'

        tasks = ['clean', 'build']
    }

    task dockerComposeUp(type: Exec) {
        description = 'Build and start all services using Docker Compose'
        group = 'Docker'

        commandLine 'docker-compose', 'up', '--build', '-d'
    }

    task dockerComposeStart(type: Exec) {
        description = 'Build and start all services using Docker Compose'
        group = 'Docker'

        dependsOn bootBuildImage

        commandLine 'docker-compose', 'up', '--build', '-d'
    }

    task dockerComposeDown(type: Exec) {
        description = 'Stop and remove all services using Docker Compose'
        group = 'Docker'

        commandLine 'docker-compose', 'down'
    }

    bootJar {
        enabled = false
    }

    bootBuildImage{
        enabled = false
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}